[gd_scene load_steps=3 format=3 uid="uid://dqgjcektrby7d"]

[ext_resource type="Script" path="res://main_menu/components/menu.gd" id="1_h4vpx"]
[ext_resource type="Theme" uid="uid://bilm420i6mgm1" path="res://themes/main_menu.tres" id="6_dh5ia"]

[node name="Menu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("6_dh5ia")
script = ExtResource("1_h4vpx")

[node name="MenuView" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="MenuView"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChildrenButtons" type="VBoxContainer" parent="MenuView/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2

[node name="CloseButton" type="Button" parent="MenuView/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="ChildrenViews" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
